[package]
name = "al9000"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "json", "registry", "std"] }
